Search Icon Alignment Fix

--- a/style.css
+++ b/style.css
@@ -118,6 +118,6 @@ tfoot input {
 .fa-icon {
   color: white;
   position: absolute;
-  top: 7px;
+  top: 5px;
   right: 0;
 }
